--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    background: rgb(38, 65, 67);
+    background: rgb(71, 35, 15);
     color: rgb(45, 45, 45);
     padding: 10px;
-    font-family: arial;
+    font-family: comic sans ms;
 }
 #all-contents {
   max-width: 800px;
@@ -12,10 +12,11 @@ body {
 /* navigation menu */
 nav {
     background: rgb(202, 113, 39);
-   margin: 0 auto;
+    margin: 0 auto;
     display: flex;
     padding: 10px;
     margin-bottom: 20px;
+    border-radius: 30px;
 }
 h1 {
     display: flex;
@@ -55,7 +56,7 @@ main {
 
 /* portfolio styles */
 #interests {
-    border: 4px white ridge;
+    border: 4px white solid;
     padding: 8px;
 }
 h2, h3 {
